fix: Shorten tags on mobile

--- a/src/scss/abstract/_variable.scss
+++ b/src/scss/abstract/_variable.scss
@@ -1,5 +1,6 @@
 $black: #000;
 $white: #fff;
+$light-white: rgba(255, 255, 255, 0.15);
 $cadetblue: #2d7f98;
 $yellow: #ffae20;
 $skyblue: #bccbdd;
