--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,11 +10,14 @@
     text-align: center;
 
     @include font($weight: 500, $size: 2em);
+  }
 
-    @include tablet-992 {
-      font-size: 2.5em;
-      @include font($weight: 500, $size: 2.5em);
-    }
+  &--second {
+    @include font($size: 14px);
+  }
+
+  &--yellow {
+    color: $yellow;
   }
 }
 
@@ -72,5 +75,3 @@ p {
     @include font($size: 16px);
   }
 }
-
-
